tests/NormalTests/paczka1/fuzzy1/68305247.err
Error in line 1: CigSQaWNxrF A467 61,5
Error in line 5: xp1 S916 55,1
Error in line 30: PGM A246 125,2
